--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@
             </li>
 
             <li>
-              <a href="https://www.insatgram.com/coding.stella" target=_blank class="social-link">
-                <ion-icon name="logo-instagram"></ion-icon>
+              <a href="https://www.facebook.com/herkenneth" target=_blank class="social-link">
+                <ion-icon name="logo-facebook"></ion-icon>
               </a>
             </li>
 
@@ -522,20 +522,20 @@
             <span class="span">Location:</span>
 
             <address class="contact-link">
-              153 Williamson Plaza, Maggieberg, MT 09514
+              Proper Mangusu Baranggay, Zamboanga City, MT 404
             </address>
           </div>
 
           <div class="contact-item">
             <span class="span">Join Us:</span>
 
-            <a href="mailto:Info@gamehive.com" class="contact-link">Info@gamehive.com</a>
+            <a href="mailto:kennethgregorioperez@gmail.com" class="contact-link">kennethgregorioperez@gmail.com</a>
           </div>
 
           <div class="contact-item">
             <span class="span">Phone:</span>
 
-            <a href="tel:+12345678910" class="contact-link">+1 (234) 567-8910</a>
+            <a href="tel:+639268128273" class="contact-link">+(63) 926-8128-273</a>
           </div>
 
         </div>
@@ -560,7 +560,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2023 coding.stella All Rights Reserved.
+          &copy; 2024 polongdev All Rights Reserved.
         </p>
 
       </div>
